# Tsimring-Enhanced-synaptic-dynamics-drive-the-reorganization-of-binocular-circuit

./: README.md  computational_model.m
2P Analysis/: README.md
2P Analysis/scripts/: meta_analysis_script.m
2P_Analysis/: Average_ISI_Distribition_and_FDR.m  README.md  meta_analysis_script.m
2P_Analysis/Analyze processed data/: create_table_of_all3sessions_function.m  identify_vis_responses.m
2P_Analysis/FOV alignment/: create_blinded_timepoint_folders_REFs.m  create_random_timepoint_folders_REFs_ROIs.m  create_timepoint_folders_REFs_ROIs.m  manual_alignment_comparisons.m  run_FOV_alignment_by_dendriticDistance.m
2P_Analysis/Process data/: analysis_spine_2p_data_function.m  analyze_interocular_properties_longstim.m  get_coords_longstim.m  normalize_stimevents_spine_longstim.m  orientation_tuning_vector_longstim.m
2P_Analysis/scripts/: meta_analysis_script.m
Computational model/: README.md  fig7B.m  fig7C_D_E.m  figS8.m  main.m  preferred_orientation.m  testing.m
Computational model/figS8data/: figS8_README.md
FOV Alignment/: README.md
FOV Alignment/script/: run_FOV_alignment_by_dendriticDistance.m
FOV Alignment/src/: ccopy_timepoint_folders_REFs_ROIs.m  check_FOVs.m  create_blinded_timepoint_folders_REFs_ROIs.m
Figures/Figure1 - population spine resp/: Figure1.m  spine_resp_by_session_by_neuron_by_day.m
Figures/Figure7 - model/: Fig7.m  (+8 more)
Optical Imaging Analysis/: .gitignore  README.md  pyproject.toml  setup.py
Optical Imaging Analysis/oi_analyser/: __init__.py  imaging.py
Optical Imaging Analysis/oi_analyser/test/: test_clean_diode.py
(+194 files in other folders)
